5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1728_2505.log
== TEST (2019-05-15 10:58:30) 
-- CODE:
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

from math import*
b = 0
r  = 3
x1 = 3
s = 0

while (r < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	b = x - s
	
print(round(b, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:59:19) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))


b = 0
r  = 3
x1 = 3
s = 0

while (r < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	b = x - s
	
print(round(b, 10))
-- OUTPUT:
0.9248322293
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:03:31) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))



r  = 3
x1 = 3
s = 0

while (r < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	x = x - s
	
	
print(round(x, 10))
-- OUTPUT:
0.9248322293
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:04:36) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))



r  = 3
x1 = 3
s = 0

while (r < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	x = x - s
	
	
print(round(x, 10))
-- OUTPUT:
0.9248322293
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:05:01) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))



r  = 3
x1 = 3
s = 0

while (r < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	x = x - s
	
	
print(round(x, 10))
-- OUTPUT:
0.9248322293
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:08:03) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))


r  = 3
x1 = 3
s = 0

while (r < k*3):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	x = x - s
	
	
print(round(x, 10))
-- OUTPUT:
0.919082813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:11:36) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))


r  = 3
x1 = 3
s = 0

while (r < (k*3 - 2)):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	x = x - s
	
	
print(round(x, 10))
-- OUTPUT:
0.919082813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:19:19) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))


r  = 3
x1 = 3
s = 0

while (r/3 < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	x = x - s
	
	
print(round(x, 10))
-- OUTPUT:
0.919082813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:20:45) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))


r  = 3
x1 = 3
s = 0

while (r/3 < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	x = x - s
	
	
print(round(x, 10))
-- OUTPUT:
0.919082813
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:22:28) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

b = 0
r  = 3
x1 = 3
s = 0

while (r/3 < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	b = x - s
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:22:42) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

b = 0
r  = 3
x1 = 3
s = 0

while (r/3 < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	b = x - s
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:25:07) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

b = 0
r  = 3
x1 = 3
s = 0
a = 0

while (a < k):
	s = x**x1/factorial(r)
	x1 = x1 + 2
	r = r + 2
	b = x - s
	a = a + 1
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:31:53) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

b = 0
r  = 3
x1 = 3
s = 0
a = 0

while (a < k):
	s = x**x1/factorial(r)
	s1 = x**x2/factorial(r1)
	x1 = x1 + 4
	r = r + 4
	x2 = x1 + 2
	r1 = r + 2
	b = x - s + s2
	a = a + 1
	
	
print(round(b, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    s1 = x**x2/factorial(r1)
NameError: name 'x2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:32:34) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))
x2 = 2
s1 =0
b = 0
r  = 3
x1 = 3
s = 0
a = 0

while (a < k):
	s = x**x1/factorial(r)
	s1 = x**x2/factorial(r1)
	x1 = x1 + 4
	r = r + 4
	x2 = x1 + 2
	r1 = r + 2
	b = x - s + s2
	a = a + 1
	
	
print(round(b, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    s1 = x**x2/factorial(r1)
NameError: name 'r1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:43:06) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3

while (i < k):
	soma = x + (-x** x1)/factorial(r)
	x1 = x1 + 2
	r = r1 + 2
	i = i + 1
	
print(round(soma, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    r = r1 + 2
NameError: name 'r1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:43:20) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3

while (i < k):
	soma = x + (-x** x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	i = i + 1
	
print(round(soma, 10))
-- OUTPUT:
1.570792728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:44:22) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = 1

while (i < k):
	soma = x + (a + x** x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = a *-1
	i = i + 1
	
print(round(soma, 10))
-- OUTPUT:
1.5707999507
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:44:53) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = 1

while (i < k):
	soma = x + ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = a *-1
	i = i + 1
	
print(round(soma, 10))
-- OUTPUT:
1.5707999256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:46:08) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = 1

while (i < k):
	soma = x - ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = a*-1
	i = i + 1
	
print(round(soma, 10))
-- OUTPUT:
1.570792728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:46:42) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = 1

while (i <= k):
	soma = x - ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = a*-1
	i = i + 1
	
print(round(soma, 10))
-- OUTPUT:
1.5707963837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:49:30) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = 1
b = 0

while (i <= k):
	b= ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = a*-1
	i = i + 1
	soma = x + b
	
print(round(soma, 10))
-- OUTPUT:
1.5707962699
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:50:57) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	b= ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = a*-1
	i = i + 1
	soma = x + b
	
print(round(soma, 10))
-- OUTPUT:
1.5707963837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:54:14) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	b= ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	soma = x + b
	
print(round(soma, 10))
-- OUTPUT:
1.5707963837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:04:29) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	b = ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	x = x + b
	
print(round(soma, 10))
-- OUTPUT:
1.5707963837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:04:52) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	b = ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	x = x + b
	
print(round(x, 10))
-- OUTPUT:
0.9303519585
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:05:06) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	b = ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	soma = x + b
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:50:15) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	soma = ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:52:17) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	soma = ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:54:55) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	soma =x - ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:56:04) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	soma =x - ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:56:24) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = 0

while (i <= k):
	soma =x - ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:59:02) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = 1
b = 0

while (i <= k):
	soma =x - ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:46:25) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = 1

while (i <= k):
	soma = soma + x - ((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	
	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:28:59) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = 1
b= 0

while (i <= k):
	b =((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	soma = x - b	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:35:21) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = x

while (i <= k):
	b =((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	soma = x - b	
print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:35:58) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = x

while (i <= k):
	b =((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	soma = x + b	
print(round(soma, 10))
-- OUTPUT:
1.5707963837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:36:10) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = x

while (i <= k):
	b =((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	soma = x - b	
print(round(soma, 10))
-- OUTPUT:
1.5707962699
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:36:35) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = x
print(x)
while (i <= k):
	b =((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	soma = x - b	
print(round(soma, 10))
-- OUTPUT:
1.5707963267948966
1.5707962699
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:37:21) 
-- CODE:
from math import*
x = eval(input("digite o angulo: "))
k =int(input("digite o K: "))

soma = 0
i = 0
x1 = 3
r = 3
a = -1
b = x

while (i <= k):
	b =((a*x)**x1)/factorial(r)
	x1 = x1 + 2
	r = r + 2
	a = -a
	i = i + 1
	soma = x - b	
print(round(b, 10))
-- OUTPUT:
5.69e-08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
